SERVER-126487 Fallback from join reordering when a $lookup "as" field shadows an earlier localField (#54738)

GitOrigin-RevId: 18b86ec481be3c90ffc0e2de3a44384a3261030a